[package]
name = "papr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
directories = "6.0.0"
inquire = "0.9.1"
libsql = { version = "0.9.29", features = ["remote"] }
reqwest = "0.13.1"
serde = "1.0.228"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.10"
nucleo-matcher = "0.3.1"
pdf-extract = "0.10.0"
nucleo = "0.5.0"
